--- a/ticket_tracker-main/index.html
+++ b/ticket_tracker-main/index.html
@@ -31,10 +31,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="issueAssignedToInput">Description</label>
+                <label for="issueAssignedToInput"></label>
                 <input type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter Person Responsible...">
             </div>
-            <button type="submit" class="btn btn-warning">Add</button>
+            <button type="submit" class="btn btn-warning">AssignedTo</button>
         </form>
     </section>
     <section class="row">
