--- a/ticket_tracker-main/index.html
+++ b/ticket_tracker-main/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body onload="fetchIssues()">
 
 <section class="container">
     <h1>Ticket Tracker for Demo</h1>
@@ -31,10 +32,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="issueAssignedToInput"></label>
+                <label for="issueAssignedToInput">Assigned To</label>
                 <input type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter Person Responsible...">
             </div>
-            <button type="submit" class="btn btn-warning">AssignedTo</button>
+            <button type="submit" class="btn btn-warning">Add</button>
         </form>
     </section>
     <section class="row">
